
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct vertex_buffer {int** Win; } ;
struct TYPE_4__ {struct vertex_buffer* VB; } ;
typedef size_t GLuint ;
typedef TYPE_1__ GLcontext ;


 int DEPTH_SCALE ;
 int gl_update_hitflag (TYPE_1__*,int) ;

__attribute__((used)) static void select_triangle( GLcontext *ctx,
                             GLuint v0, GLuint v1, GLuint v2, GLuint pv )
{
   struct vertex_buffer *VB = ctx->VB;

   gl_update_hitflag( ctx, VB->Win[v0][2] / DEPTH_SCALE );
   gl_update_hitflag( ctx, VB->Win[v1][2] / DEPTH_SCALE );
   gl_update_hitflag( ctx, VB->Win[v2][2] / DEPTH_SCALE );
}
