; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_triangle.c_select_triangle.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_triangle.c_select_triangle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.vertex_buffer* }
%struct.vertex_buffer = type { i32** }

@DEPTH_SCALE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i64, i64, i64, i64)* @select_triangle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @select_triangle(%struct.TYPE_4__* %0, i64 %1, i64 %2, i64 %3, i64 %4) #0 {
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.vertex_buffer*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load %struct.vertex_buffer*, %struct.vertex_buffer** %13, align 8
  store %struct.vertex_buffer* %14, %struct.vertex_buffer** %11, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %16 = load %struct.vertex_buffer*, %struct.vertex_buffer** %11, align 8
  %17 = getelementptr inbounds %struct.vertex_buffer, %struct.vertex_buffer* %16, i32 0, i32 0
  %18 = load i32**, i32*** %17, align 8
  %19 = load i64, i64* %7, align 8
  %20 = getelementptr inbounds i32*, i32** %18, i64 %19
  %21 = load i32*, i32** %20, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 2
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @DEPTH_SCALE, align 4
  %25 = sdiv i32 %23, %24
  %26 = call i32 @gl_update_hitflag(%struct.TYPE_4__* %15, i32 %25)
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %28 = load %struct.vertex_buffer*, %struct.vertex_buffer** %11, align 8
  %29 = getelementptr inbounds %struct.vertex_buffer, %struct.vertex_buffer* %28, i32 0, i32 0
  %30 = load i32**, i32*** %29, align 8
  %31 = load i64, i64* %8, align 8
  %32 = getelementptr inbounds i32*, i32** %30, i64 %31
  %33 = load i32*, i32** %32, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 2
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* @DEPTH_SCALE, align 4
  %37 = sdiv i32 %35, %36
  %38 = call i32 @gl_update_hitflag(%struct.TYPE_4__* %27, i32 %37)
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %40 = load %struct.vertex_buffer*, %struct.vertex_buffer** %11, align 8
  %41 = getelementptr inbounds %struct.vertex_buffer, %struct.vertex_buffer* %40, i32 0, i32 0
  %42 = load i32**, i32*** %41, align 8
  %43 = load i64, i64* %9, align 8
  %44 = getelementptr inbounds i32*, i32** %42, i64 %43
  %45 = load i32*, i32** %44, align 8
  %46 = getelementptr inbounds i32, i32* %45, i64 2
  %47 = load i32, i32* %46, align 4
  %48 = load i32, i32* @DEPTH_SCALE, align 4
  %49 = sdiv i32 %47, %48
  %50 = call i32 @gl_update_hitflag(%struct.TYPE_4__* %39, i32 %49)
  ret void
}

declare dso_local i32 @gl_update_hitflag(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
